# mnemom-types

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  package-lock.json  package.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependabot-auto-merge.yml  publish.yml  scorecard.yml
python/: pyproject.toml
python/src/mnemom_types/: __init__.py  a2a.py  constants.py  gate.py  reputation.py  risk.py  risk_constants.py  team.py  team_constants.py
python/tests/: test_constants.py  test_imports.py  test_models.py
typescript/: package-lock.json  package.json
typescript/src/: a2a.ts  constants.ts  gate.ts  index.ts  reputation.ts  risk-constants.ts  risk.ts  team-constants.ts  team.ts
typescript/src/__tests__/: constants.test.ts  exports.test.ts  risk-constants.test.ts  serialization.test.ts  team-constants.test.ts
