[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mnemom-types"
version = "0.5.2"
description = "Shared type definitions for Mnemom services and SDKs"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Mnemom.ai", email = "dev@mnemom.ai" }
]
keywords = [
    "mnemom",
    "reputation",
    "types",
    "ai",
    "agents",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.urls]
Homepage = "https://github.com/mnemom/mnemom-types"
Repository = "https://github.com/mnemom/mnemom-types.git"
Issues = "https://github.com/mnemom/mnemom-types/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.sdist]
include = ["/src"]

[tool.hatch.build.targets.wheel]
packages = ["src/mnemom_types"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM"]
ignore = ["E501"]

[tool.mypy]
strict = true
python_version = "3.10"
